Add unstable version for test cases

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,6 @@
 SITE_URL=url
 SIGNIN_USER_EMAIL=email
 SIGNIN_USER_PASSWORD=password
+SIGNUP_USER_EMAIL=email
+SIGNUP_USER_PASSWORD=password
 API_URL=api_url
