--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "testing",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0",
-    "jest-puppeteer": "^4.4.0",
-    "puppeteer": "^2.0.0"
-  },
-  "scripts": {
-    "test": "jest"
-  },
-  "dependencies": {
-    "axios": "^0.19.2",
-    "dotenv": "^8.2.0"
-  }
+    "name": "testing",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
+        "babel-jest": "^24.9.0",
+        "eslint": "^6.8.0",
+        "jest": "^24.9.0",
+        "jest-puppeteer": "^4.4.0",
+        "puppeteer": "^2.0.0"
+    },
+    "scripts": {
+        "test": "jest --runInBand"
+    },
+    "dependencies": {
+        "axios": "^0.19.2",
+        "dotenv": "^8.2.0"
+    }
 }
